--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Mi primer template </title>
+        <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}" />
     </head>
     <body>
         <h1>
@@ -21,5 +22,6 @@
                 <li> {{ hobby }} </li>
             {% endfor %}
         </ul>
+        <script src="{{url_for( 'static', filename='js/index.js')}}"></script>
     </body>
 </html>
